# twbm

./: .bumpversion.cfg  .coveragerc  .env.local  .env.prod  .env.testing  .envrc  .gitignore  .pre-commit-config.yaml  .run  CHANGELOG.md  MANIFEST.in  Makefile  Pipfile  README.md  mypy.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
.run/: test_bukudb.run.xml
['', '/test/tests_data/: bm_test.db']
changelog.d/: 20220810_114243_sysid.md
db/: bm.db  dal.py  initdb.sh
db/alembic/versions/: 7c2eff0bf291_create_all.py
scripts/: create_twbm_table.sh  local_install.sh  patch-buku.sh  reset_db.sh  run.sh  test-pipe.sh  twbm-downgrade-db.sh  twbm-upgrade-db.sh
sql/: clean_utm_clutter.sql  queries.sql  scratch.sql
test/: conftest.py  test_bookmarks.py  test_buku.py  test_cli.py  test_environment.py  test_handle_uri.py  test_load_db.py  test_pipe.sh  test_twb.py  test_twbm.py
test/db/: test_dal.py
test/sql/: load_testdata.sql
test/tests_data/: bm.db  bm_fts.db.bkp  bm_test.db  load_testdata.sql  ready_data.py  test.db
tests/: conftest.py  pytest.ini  test-pipe.sh  test_bookmarks.py  test_buku.py  test_environment.py  test_handle_uri.py  test_load_db.py  test_twb.py  test_twbm.py
tests/db/: test_dal.py
tests/sql/: load_testdata.sql
tests/tests_data/: ready_data.py  test.pptx
twbm/: __init__.py  bm2.db  bookmarks.py  buku  buku.py  environment.py  handle_uri.py  load_db.py  sql.py  twb.py
twbm/db/: alembic.ini  dal.py
twbm/db/alembic/versions/: 7c2eff0bf291_create_all.py
