[metadata]
name = twbm
version = 0.9.0
description = "CLI bookmark manager based on buku"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/twbm
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    starlette
    beautifulsoup4
    certifi
    cryptography
    urllib3
    html5lib
    aiosql
    SQLAlchemy
    alembic
    typer
    pydantic[dotenv]
include_package_data = True
python_requires = >=3.8

[options.packages.find]
;where = snipsync  ; gotcha: was not importable as snipsync

[options.package_data]
sse_starlette = "py.typed"
