[metadata]
name = twbm
version = 0.17.2
description = "CLI bookmark buddy"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = sysid
author_email = sysid@gmx.de
url = https://github.com/sysid/twbm
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    beautifulsoup4
    certifi
    cryptography
    urllib3
    html5lib
    aiosql
    SQLAlchemy
    alembic
    typer
    pydantic[dotenv]
include_package_data = True
python_requires = >=3.10
scripts =
    scripts/twbm-downgrade-db.sh
    scripts/twbm-upgrade-db.sh

[options.entry_points]
console_scripts =
    twbuku = twbm:main
    twbm = twbm:app

[isort]
profile = black
src_paths = isort,test
skip = .gitignore,.dockerignore,.tox,.venv,build,dist,twbm/buku,twbm/buku.py


# https://github.com/wemake-services/wemake-python-styleguide/blob/master/setup.cfg
[flake8]
max-complexity = 10
max-line-length = 88

ignore =
    E203  ; whitespace before ‘:’ (black)
    F541  ; f-string is missing placeholders
    B008  ; Do not perform function calls in argument defaults.
	E501  ; line too long (will be taken care of by black)
	ASS001 ; do not use bare asserts

# Self settings:
max-imports = 17

# Excluding some directories:
exclude =
    .git
    __pycache__
    .venv
    .eggs
    *.egg
    dist
    buku.py
    buku

per-file-ignores =
# These function names are part of 3d party API:
#wemake_python_styleguide/visitors/ast/*.py: N802

# Global options:
[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
exclude = (buku, buku.py, tests)
ignore_missing_imports = True
follow_imports = silent
no_implicit_optional = True

# Per-module options:
[mypy-mycode.twbm.twb]
disallow_untyped_defs = False

[coverage:run]
omit = test/*,**/__main__.py,**/.venv/*,**/site-packages/*,examples/*,**/buku.py,**/buku,twbm/sql.py
branch = True

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 70

[tool.scriv]
format = md
version = literal: ./twbm/__init__.py: __version__
